<resources>
    <string name="app_name">Wordle</string>
    <string name="guess_1">Guess 1:</string>
    <string name="guess_3">Guess 3:</string>
    <string name="guess_2_check">Guess 2 Check:</string>
    <string name="guess_2">Guess 2:</string>
    <string name="guess_1_check">Guess 1 Check:</string>
    <string name="guess_3_check">Guess 3 Check:</string>
    <string name="userFirstGuess">star</string>
    <string name="userFirstGuessCheck">XXXX</string>
    <string name="userSecondGuess">dogs</string>
    <string name="userSecondGuessCheck">XOXX</string>
    <string name="userThirdGuess">most</string>
    <string name="userThirdGuessCheck">XOXX</string>
</resources>